UI: fix too narrow hover menu on "asciidata" formatted keyvalue items

--- a/core/htdocs_source/app/styles/app.css
+++ b/core/htdocs_source/app/styles/app.css
@@ -609,7 +609,6 @@ div.required input.flatpickr-input {
  * Others
  */
 .hover-element {
-  display: inline flex;
   flex-direction: column;
 }
 
